Added abstracts of File System and Graphic Console.

--- a/Source/TheCat/TheCat.csproj
+++ b/Source/TheCat/TheCat.csproj
@@ -49,6 +49,8 @@
     <Reference Include="mscorlib.extensions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IFileSystemProvider.cs" />
+    <Compile Include="Abstract\IGraphicConsole.cs" />
     <Compile Include="CatBase.cs" />
     <Compile Include="CatClass.cs" />
     <Compile Include="CatConfig.cs" />
