--- a/Source/TheCat.WindowsPhone/TheCat.WindowsPhone.csproj
+++ b/Source/TheCat.WindowsPhone/TheCat.WindowsPhone.csproj
@@ -66,6 +66,12 @@
     <Compile Include="Concrete\IsolatedStorageFileSystem.cs" />
     <Compile Include="Concrete\WindowConsole.cs" />
     <Compile Include="Concrete\WindowsPhoneNavigationManager.cs" />
+    <Compile Include="Controls\CodeEditorUserControl.xaml.cs">
+      <DependentUpon>CodeEditorUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="EditFilePage.xaml.cs">
+      <DependentUpon>EditFilePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EditFileView.xaml.cs">
       <DependentUpon>EditFileView.xaml</DependentUpon>
     </Compile>
@@ -84,6 +90,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="Controls\CodeEditorUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="EditFilePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="EditFileView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -113,6 +127,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="Images\appbar.transport.play.rest.png" />
+    <Content Include="Images\cancel.png" />
+    <Content Include="Images\save.png" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
