--- a/Source/TheCat.Infrastructure/TheCat.Infrastructure.csproj
+++ b/Source/TheCat.Infrastructure/TheCat.Infrastructure.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Net" />
     <Reference Include="mscorlib.extensions" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseEditViewModel.cs" />
@@ -87,6 +88,12 @@
     <Compile Include="Validation\ValueProviders\FuncValueProvider.cs" />
     <Compile Include="VirtualFileSystem\Events\ClipboardChangedEvent.cs" />
     <Compile Include="VirtualFileSystem\Events\ItemChangedEvent.cs" />
+    <Compile Include="VirtualFileSystem\ExtendedInfo\ExtendedInfoCollection.cs" />
+    <Compile Include="VirtualFileSystem\ExtendedInfo\ExtendedInfoItem.cs" />
+    <Compile Include="VirtualFileSystem\ExtendedInfo\ExtendedInfoManager.cs" />
+    <Compile Include="VirtualFileSystem\ExtendedInfo\ExtendedInfoReader.cs" />
+    <Compile Include="VirtualFileSystem\ExtendedInfo\ExtendedInfoWriter.cs" />
+    <Compile Include="VirtualFileSystem\ExtendedInfo\Extensions.cs" />
     <Compile Include="VirtualFileSystem\Extensions.cs" />
     <Compile Include="VirtualFileSystem\FileSystemCache.cs" />
     <Compile Include="VirtualFileSystem\FileSystemItemClipboard.cs" />
