--- a/Source/TheCat.Infrastructure/TheCat.Infrastructure.csproj
+++ b/Source/TheCat.Infrastructure/TheCat.Infrastructure.csproj
@@ -52,20 +52,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseEditViewModel.cs" />
+    <Compile Include="BaseListViewModel.cs" />
     <Compile Include="BaseViewModel.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="CompositeParams.cs" />
+    <Compile Include="Concrete\BaseXmlRepository.cs" />
+    <Compile Include="Concrete\BaseXmlReader.cs" />
+    <Compile Include="Concrete\BaseXmlWriter.cs" />
+    <Compile Include="Concrete\RepositoryItemChangedEvent.cs" />
     <Compile Include="Events\BaseEvent.cs" />
     <Compile Include="Events\EventManager.cs" />
     <Compile Include="Events\IEvent.cs" />
+    <Compile Include="IBaseRepository.cs" />
     <Compile Include="INavigationManager.cs" />
     <Compile Include="Lazy.cs" />
     <Compile Include="Locator.cs" />
     <Compile Include="LocatorConfigurer.cs" />
     <Compile Include="PresetManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Session.cs" />
-    <Compile Include="SessionDefinition.cs" />
+    <Compile Include="Sessions\ISessionDefinitionRepository.cs" />
+    <Compile Include="Sessions\Session.cs" />
+    <Compile Include="Sessions\SessionDefinition.cs" />
+    <Compile Include="Sessions\SessionDefinitionRepository.cs" />
+    <Compile Include="Sessions\Views\SessionDefinitionsEditModel.cs" />
+    <Compile Include="Sessions\Views\SessionDefinitionsViewModel.cs" />
     <Compile Include="StringKeys.cs" />
     <Compile Include="Validation\ValidatorHost.cs" />
     <Compile Include="Validation\CompositeValidationResult.cs" />
