--- a/Source/TheCat.WindowsPhone/TheCat.WindowsPhone.csproj
+++ b/Source/TheCat.WindowsPhone/TheCat.WindowsPhone.csproj
@@ -88,8 +88,8 @@
     <Compile Include="EditFilePage.xaml.cs">
       <DependentUpon>EditFilePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="EditFileView.xaml.cs">
-      <DependentUpon>EditFileView.xaml</DependentUpon>
+    <Compile Include="EditSessionPage.xaml.cs">
+      <DependentUpon>EditSessionPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="FilesPage.xaml.cs">
       <DependentUpon>FilesPage.xaml</DependentUpon>
@@ -101,6 +101,9 @@
       <DependentUpon>Page1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionsPage.xaml.cs">
+      <DependentUpon>SessionsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="StartPanoramaPage.xaml.cs">
       <DependentUpon>StartPanoramaPage.xaml</DependentUpon>
     </Compile>
@@ -124,7 +127,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="EditFileView.xaml">
+    <Page Include="EditSessionPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -141,6 +144,10 @@
       <SubType>Designer</SubType>
     </DesignData>
     <Page Include="Page1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SessionsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -162,6 +169,7 @@
     </Content>
     <Resource Include="Images\appbar.transport.play.rest.png" />
     <Content Include="Images\appbar.clipboard.paste.png" />
+    <Resource Include="Images\appbar.cog.png" />
     <Content Include="Images\appbar.folder.png" />
     <Resource Include="Images\appbar.page.small.png" />
     <Content Include="Images\cancel.png" />
