--- a/Source/TheCat.Infrastructure/TheCat.Infrastructure.csproj
+++ b/Source/TheCat.Infrastructure/TheCat.Infrastructure.csproj
@@ -60,15 +60,16 @@
     <Compile Include="Concrete\BaseXmlReader.cs" />
     <Compile Include="Concrete\BaseXmlWriter.cs" />
     <Compile Include="Concrete\RepositoryItemChangedEvent.cs" />
+    <Compile Include="EnvironmentManagement\EnvironmentManager.cs" />
     <Compile Include="Events\BaseEvent.cs" />
     <Compile Include="Events\EventManager.cs" />
     <Compile Include="Events\IEvent.cs" />
     <Compile Include="IBaseRepository.cs" />
+    <Compile Include="IEnvironmentManager.cs" />
     <Compile Include="INavigationManager.cs" />
     <Compile Include="Lazy.cs" />
     <Compile Include="Locator.cs" />
     <Compile Include="LocatorConfigurer.cs" />
-    <Compile Include="PresetManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sessions\ISessionDefinitionRepository.cs" />
     <Compile Include="Sessions\Session.cs" />
